<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/drawer_layout"
   	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
    android:theme="@style/NavigationDrawerStyle" >
	
   	<FrameLayout
       	android:id="@+id/content_frame"
       	android:layout_width="match_parent"
       	android:layout_height="match_parent" >

   	    <ScrollView
		    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			android:background="@drawable/background" >
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="@dimen/padding_layout_top"
				android:paddingBottom="@dimen/padding_layout_buttom" 
				android:paddingLeft="@dimen/padding_layout_left"
				android:paddingRight="@dimen/padding_layout_right"
		        android:orientation="vertical" >
		        
		        <TableLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="@dimen/margin_top"
			        android:paddingTop="@dimen/padding_layout_top"
					android:paddingBottom="@dimen/padding_layout_buttom" 
					android:paddingLeft="@dimen/padding_layout_left"
					android:paddingRight="@dimen/padding_layout_right"
			        android:orientation="vertical"
			        android:background="@drawable/background_linearlayout" >
			        
			        <TableRow 
						android:id="@+id/meters_list_TableRow"
				        android:layout_width="match_parent"
						android:layout_height="wrap_content" >
				
				        <Spinner
					        android:id="@+id/meters_list_spinner"
			            	android:gravity="center"
					        android:layout_width="match_parent"
					        android:layout_height="@dimen/height_text"
					        android:paddingLeft="@dimen/padding_item_left"
					        android:paddingRight="@dimen/padding_item_right"
				            android:layout_weight="1"
				            android:typeface="monospace"
							android:textSize="@dimen/spinner_font_size" />
				            
				        <TextView 
				            android:id="@+id/meter_list_textView"
				            android:gravity="center|right"
						    android:layout_width="match_parent"
						    android:layout_height="@dimen/height_text"
				            android:paddingRight="@dimen/padding_item_right"
				            android:layout_weight="1" 
				            android:typeface="monospace"
				            android:textStyle="bold" 
				            android:textColor="@color/text_color"
							android:textSize="@dimen/text_font_size"
				            android:text="@string/meters_list_textView" />
				        
				    </TableRow>
				          
					
		          	<TableRow 
						android:id="@+id/report_type_TableRow"
				        android:layout_width="match_parent"
						android:layout_height="wrap_content"
					    android:layout_marginTop="@dimen/margin_between_items" >
				
				        <Spinner
					        android:id="@+id/report_type_spinner"
			            	android:gravity="center"
					        android:layout_width="match_parent"
					        android:layout_height="@dimen/height_text"
					        android:paddingLeft="@dimen/padding_item_left"
					        android:paddingRight="@dimen/padding_item_right"
				            android:layout_weight="1"
				            android:typeface="monospace"
							android:textSize="@dimen/spinner_font_size" />
				            
				        <TextView 
				            android:id="@+id/report_type_textView"
				            android:gravity="center|right"
						    android:layout_width="match_parent"
						    android:layout_height="@dimen/height_text"
				            android:paddingRight="@dimen/padding_item_right"
				            android:layout_weight="1" 
				            android:typeface="monospace"
				            android:textStyle="bold" 
				            android:textColor="@color/text_color"
							android:textSize="@dimen/text_font_size"
				            android:text="@string/report_type_textView" />
				        
				    </TableRow>
				      
		    	</TableLayout>
		    	    
			    <Button
			        android:id="@+id/show_report_button"
			       	android:gravity="center"
				    android:layout_width="match_parent"
				    android:layout_height="@dimen/height_text"
				    android:layout_marginTop="@dimen/margin_between_layouts"
				    android:layout_marginBottom="@dimen/margin_bottom"
				    android:typeface="monospace"
					android:textStyle="bold" 
					android:background="@drawable/background_button"
			  	    android:textColor="@color/text_color"
					android:textSize="@dimen/button_font_size"
			        android:text="@string/show_report_button" />
			    
		    </LinearLayout>
		
		</ScrollView>
   	</FrameLayout>
   
    <LinearLayout
       	android:layout_width="@dimen/navigation_drawer_width"
      	android:layout_height="match_parent"
       	android:orientation="vertical"
       	android:layout_gravity="start" >
		
		<LinearLayout
	       	android:layout_width="@dimen/navigation_drawer_width"
	      	android:layout_height="wrap_content"
	       	android:orientation="vertical"
			android:background="@drawable/header" >
			
	    </LinearLayout>
		
      	<ListView 
			android:id="@+id/left_drawer"
			android:layout_width="@dimen/navigation_drawer_width"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:choiceMode="singleChoice"
			android:divider="#C6FF4D"
			android:dividerHeight="1dp"
			android:background="@color/background_color" />
       
   </LinearLayout>
       
</android.support.v4.widget.DrawerLayout>